--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a href="mailto:djbaishya007@gmail.com"><img src="gmail.png" alt="Email" /></a>
           <a href="https://www.instagram.com/tijnahd"><img src="instagram.png" alt="Instagram" /></a>
           <a href="https://github.com/dhanjitbaishya"><img src="github.png" alt="GitHub" /></a>
-          <a href="www.linkedin.com/in/dhanjit-baishya-2534712b4"><img src="linkedin.png" alt="LinkedIn" /></a>
+          <a href="https://linkedin.com/in/dhanjit-baishya-2534712b4"><img src="linkedin.png" alt="LinkedIn" /></a>
         </div>
       </div>
 
