--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Dhanjit Baishya - Web Developer</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="img.jpeg" type="image/png" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
 
   </head>
   <body>
@@ -18,6 +18,9 @@
         <li><a href="#">Projects</a></li>
       </ul>
     </nav>
+
+    <p id="welcomeMessage"></p>
+
 
     <!-- Main Content -->
     <section class="main-section">
@@ -31,7 +34,7 @@
           <a href="mailto:djbaishya007@gmail.com"><img src="gmail.png" alt="Email" /></a>
           <a href="https://www.instagram.com/tijnahd"><img src="instagram.png" alt="Instagram" /></a>
           <a href="https://github.com/dhanjitbaishya"><img src="github.png" alt="GitHub" /></a>
-          <a href="https://linkedin.com/in/dhanjit-baishya-2534712b4"><img src="linkedin.png" alt="LinkedIn" /></a>
+          <a href="www.linkedin.com/in/dhanjit-baishya-2534712b4"><img src="linkedin.png" alt="LinkedIn" /></a>
         </div>
       </div>
 
@@ -90,6 +93,7 @@
             Key features include a responsive design, UI consistency with Facebook’s branding, user input fields for email/phone and password, accessibility enhancements, and error handling UI. The project is built using HTML, CSS, and JavaScript.
           </p>
           <a href="https://github.com/your-username/facebook-login-clone" target="_blank">View Project</a>
+      
         </div>
 
         <!-- Project Card 2 -->
