--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       </ul>
     </nav>
 
+    <div id="cookieConsent" style="display:none; position:fixed; bottom:10px; background:#eee; padding:10px;">
+      <p>This site uses cookies to enhance your experience. <button onclick="acceptCookies()">Accept</button></p>
+  </div>
     <p id="welcomeMessage"></p>
 
 
