--- a/index.html
+++ b/index.html
@@ -181,6 +181,50 @@
   <a href="https://github.com/dhanjitbaishya/bank-management-system-using-c" target="_blank">View Project</a>
 </div>
       </div>
+<div class="project-card">
+    <h4>Express REST API</h4>
+    <p>
+      This project is a RESTful API built using Express.js to provide basic CRUD functionality for a hypothetical T-shirt service. It includes endpoints for retrieving T-shirt details and submitting new T-shirt orders, using Express.js to handle routing and JSON data parsing. The project demonstrates proficiency in back-end development and REST API creation.
+    </p>
+  
+    <h5>Key Features</h5>
+    <ul>
+      <li><strong>GET /tshirt:</strong> Returns a JSON object with a sample T-shirt item and its size.</li>
+      <li><strong>POST /tshirt/:id:</strong> Accepts a T-shirt ID and a logo to customize the T-shirt, returning a customized message if the logo is provided.</li>
+      <li><strong>JSON Parsing:</strong> Uses Express's built-in JSON parser to handle incoming JSON data in requests.</li>
+      <li><strong>Error Handling:</strong> Returns an HTTP 418 error if the required "logo" field is missing in POST requests.</li>
+    </ul>
+  
+    <h5>Technologies Used</h5>
+    <ul>
+      <li><strong>Node.js:</strong> JavaScript runtime environment used for building the back-end server.</li>
+      <li><strong>Express.js:</strong> Web framework for setting up routes and handling HTTP requests.</li>
+    </ul>
+  
+    <h5>Setup and Requirements</h5>
+    <p>
+      To run this project, you need to install the necessary packages. Use the following command:
+    </p>
+    <pre><code>npm install express</code></pre>
+  
+    <h5>Usage</h5>
+    <p>
+      Start the server with <code>node index.js</code> and test the endpoints by visiting <code>http://localhost:8080/tshirt</code> or using a tool like Postman for POST requests.
+    </p>
+  
+    <h5>Learning Outcomes</h5>
+    <p>
+      This project helped reinforce knowledge of Express.js, API design, and HTTP methods. It also provided insight into building RESTful services and handling request data efficiently.
+    </p>
+  
+    <h5>Future Enhancements</h5>
+    <p>
+      Additional endpoints and database integration (e.g., MongoDB) could be added to expand functionality, enabling more detailed T-shirt customization and order management.
+    </p>
+  
+    <a href=" https://github.com/dhanjitbaishya/expres-rest-api" target="_blank">View Project</a>
+  </div>
+      
     </div>
 <br>
     <!-- Footer Section -->
