--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
       </div>
       <div class="about-sub-button">
-        <button type="button" class="btn"><p>Download CV</p></button>
-        <button type="button" class="btn"><p>Contact Me</p></button>
+        <button type="button" class="btn"><a href="DhanjitBaishya_Resume.pdf">Download CV</a></button>
+        <button type="button" class="btn"><a href="https://wa.me/+919387813090">Contact Me</a></button>
       </div>
 
     </div>
