--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="nav-logo">Dhanjit</div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="#projects">Projects</a></li>
+        <li><a href="#project">Projects</a></li>
       </ul>
     </nav>
 
