--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
       <h2>What I Do?</h2>
       <p>CRAZY WEB DEVELOPER WHO WANTS TO EXPLORE EVERY TECH STACK</p>
       <div class="tech-icons">
+        <div class="tech-icons-1">
         <ul>
           <li>
             <img src="html.svg" alt="html-logo">
@@ -103,6 +104,11 @@
             <img src="react.svg" alt="">
             <p>Reactjs</p>
           </li>
+          </ul>
+          </div>
+
+          <div class="tech-icons-2">
+            <ul>
           <li>
             <img src="django.svg" alt="">
             <p>Django</p>
@@ -111,7 +117,6 @@
             <p>Python</p>
           </li>
         </ul>
-        
       </div>
     </div>
     
