--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="#project">Projects</a></li>
+        <li><a href="#tech-skill">Skills</a></li>
       </ul>
     </nav>
 
@@ -56,7 +57,7 @@
       </div>
     </div>
 
-    <div class="tech-skill">
+    <div id="tech-skill">
       <h2>What I Do?</h2>
       <p>CRAZY WEB DEVELOPER WHO WANTS TO EXPLORE EVERY TECH STACK</p>
       <div class="tech-icons">
@@ -165,7 +166,7 @@
                                         <div class="project-card">
                                           <h2>Portfolio</h2>
                                           <p>Front-End Web Developer Portfolio that..</p>
-                                          <a href="https://dhanjitbaishya.github.io/portfolio/" class="project-link">👉View Project👈</a>
+                                          <a href="https://github.com/dhanjitbaishya/portfolio" class="project-link">👉View Project👈</a>
                                         </div>
                                   </div> <!--project-cards-1-->
                         </div>
