--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
 
     </div>
     <div class="about-2">
-      
-        
-      </div>
+          <img src="logos/coffee.svg" alt=""> 
+    </div>
     </div>
 
     <div id="tech-skill">
